# PytestPython

./: README.md  pyproject.toml
playwright/: test_UIValidations_1.py  test_more_validations.py  test_playwright_basics.py
pytest_dir/: conftest.py  test_2PyTestValidation.py  test_PyTestValidation.py
pytest_dir/playground/: test_emaillib.py  test_klass.py  test_pytest_sample.py
tests/: TestPyTestValidation.py
